[gd_scene load_steps=2 format=3 uid="uid://do0gmer0n4by0"]

[ext_resource type="Script" path="res://victory_screen.gd" id="1_x7uiw"]

[node name="VictoryScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7uiw")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.933333, 0.890196, 1)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LabelMargin" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Victory" type="Label" parent="CenterContainer/VBoxContainer/LabelMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.603922, 0.196078, 0.219608, 1)
theme_override_font_sizes/font_size = 66
text = "Victory!"

[node name="TimeContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="TimeKey" type="Label" parent="CenterContainer/VBoxContainer/TimeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Time:"

[node name="TimeValue" type="Label" parent="CenterContainer/VBoxContainer/TimeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="RoundContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="RoundKey" type="Label" parent="CenterContainer/VBoxContainer/RoundContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Moves:"

[node name="RoundValue" type="Label" parent="CenterContainer/VBoxContainer/RoundContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="ButtonMargin" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ButtonMargin"]
layout_mode = 2

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer/ButtonMargin/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Start Again"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer/ButtonMargin/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Exit"
